# z3py-playground

./: .gitignore  README.md  pyproject.toml
exercises/: 1.1_examples.ipynb  2.1_theorem_prooving.ipynb  basic-examples.ipynb
exercises/.ipynb_checkpoints/: 1.0_strategies-and-tactics-checkpoint.ipynb  3.1_advanced_stuff-checkpoint.ipynb
